--- a/osc/public/style.css
+++ b/osc/public/style.css
@@ -279,6 +279,9 @@ nav input[type=checkbox]:checked~ul {
     position: relative;
 }
 
+.category-domain-select-div-form {
+    display: none;
+}
 
 .home-body .home-body-right {
     margin: 0px auto;
@@ -530,22 +533,38 @@ nav input[type=checkbox]:checked~ul {
 }
 
 .reclamation-action-zone {
-    background-color: rgba(0, 0, 0, 0.2);
-    padding: 2px 5px;
+    background-color: rgba(0, 102, 83, 0.1);
+    /* padding: 7px 5px; */
     margin-top: 20px;
+    display: flex;
+    align-content: space-between;
 }
 .reclamation-action-zone h6 {
     color: var(--main-color);
     display: inline;
+    flex: 3;
+    padding: 0px;
+    padding-left: 5px;
+    margin: auto;
+    border-radius: 5px;
+
 }
 
 .reclamation-action-zone a {
-    color: var(--main-color);
-    font-weight: bold;    
+    color: white;
+    font-weight: bold;
+    background-color: var(--main-color);
+    flex: 1;
+    padding: 7px 0px;
+    text-align: center;
+    display: inline;
+    border-radius: 5px;
+
 }
 
 .reclamation-action-zone a:hover {
-    color: blue;
+    color: rgb(220, 217, 217);
+    text-decoration: none;
 }
 
 .one-osc-about-tab-content p a {
@@ -972,11 +991,21 @@ footer .footer-content {
     flex: 1;
 }
 
+.footer-content-right h3 {
+    padding-left: 0px;
+}
+
+footer div div ul {
+    margin-left: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
 footer div div ul li a {
     color: white;
     text-decoration: none;
-    padding-right: 0px;
-    padding-left: 0px;
+    margin-left: 5px;
+    padding-left: 10px;
 
 }
 
@@ -1020,6 +1049,9 @@ footer div div ul li {
     width: 100%;
 }
 
+.subscribe-mail2 a {
+    display: none;
+}
 
 footer hr {
     margin: 20px 0px;
@@ -1230,14 +1262,40 @@ footer em {
 
     }
 
+    .home-body-left {
+        display: none;
+    }
+
     .home-body .home-body-left {
         margin: 20px;
         order: 1 !important;
     }
 
+    .category-domain-select-div {
+        display: flex;
+        align-content: space-between;
+
+    }
+
+    .domain-category-select {
+        width: 90%;
+        border-radius: 10px;
+        border: 2px solid rgba(0, 102, 83, 0.1);
+        flex: 1;
+        height: 50px;
+    }
+
+    .category-domain-select-space {
+        width: 10%;
+    }
+
     .home-body .home-body-right {
         margin: 0px auto;
         order: 0 !important;
+    }
+
+    .category-domain-select-div-form {
+        display: inline;
     }
 
     .home-body .home-body-right .one-osc {
